# simplepy-cc

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .gitignore
{{cookiecutter.project_slug}}/tests/: test_basic.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  core.py
